# shone-cast-ai

./: .python-version  README.md  pyproject.toml
prompts/: copywriter.md
src/: agent.py  front.py  transcripter.py  transcription_reader.py
